--- a/HTML/art.css
+++ b/HTML/art.css
@@ -8,6 +8,14 @@ body {
     color: #f0f0f0;
     padding: 30px;
 }
+.About img {
+    width:1000px;  
+    height: auto;           
+    display: flex;           
+    border-radius: 25px;
+    margin-right: 250px;
+    border: 1px solid #E6E6FA;
+}
 
 h1 {
     font-size: 2.8em;
@@ -39,14 +47,6 @@ p {
     text-align: center;
 }
 
-.About img {
-    width: 100%;
-    max-width: 700px;
-    height: auto;
-    border-radius: 25px;
-    margin: 20px 0;
-    border: 5px solid #E6E6FA;;
-}
 About h2{
     text-align: left;
     margin-bottom: 20px;
@@ -169,6 +169,10 @@ button:hover {
 
 /* === Responsive Design === */
 @media screen and (max-width: 768px) {
+    .About img {
+        width:460px;
+    }
+
     .skills ul {
         flex-direction: column;
         align-items: center;
